--- a/MvcProjeKampi/Views/Category/Index.cshtml
+++ b/MvcProjeKampi/Views/Category/Index.cshtml
@@ -16,7 +16,7 @@
         <th>Durum</th>
     </tr>
     <tr>
-        <td></td>
+        <td>deneme</td>
         <td></td>
         <td></td>
         <td></td>
