--- a/MvcProjeKampi/Views/Message/Inbox.cshtml
+++ b/MvcProjeKampi/Views/Message/Inbox.cshtml
@@ -1,8 +1,8 @@
 ﻿@using EntityLayer.Concrete
-@model List<Contact>
+@model List<Message>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Inbox";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
@@ -31,7 +31,7 @@
             <div class="col-md-9">
                 <div class="card card-primary card-outline">
                     <div class="card-header">
-                        <h3 class="card-title">Gelen mesajlar</h3>
+                        <h3 class="card-title">Kişisel Gelen mesajlar</h3>
                         <div class="card-tools">
                             <div class="input-group input-group-sm">
                                 <input type="text" class="form-control" placeholder="Mail kutusunda ara">
@@ -81,12 +81,12 @@
                                                 </div>
                                             </td>
                                             <td class="mailbox-star"><a href="#"><i class="fas fa-star text-warning"></i></a></td>
-                                            <td class="mailbox-name"><a href="/Contact/GetContactDetails/@item.ContactID">@item.UserName</a></td>
+                                            <td class="mailbox-name"><a href="/Message/GetMessageDetails/@item.MessageID">@item.SenderMail</a></td>
                                             <td class="mailbox-subject">
-                                                <b>@item.Subject</b> - @item.Message.Substring(0,3)...
+                                                <b>@item.Subject</b> - @item.MessageContent.Substring(0,3)...
                                             </td>
                                             <td class="mailbox-attachment"></td>
-                                            <td class="mailbox-date">@item.ContactDate</td>
+                                            <td class="mailbox-date">@item.MessageDate</td>
                                         </tr>
                                     }
                                 </tbody>
@@ -130,3 +130,5 @@
 
 </body>
 </html>
+
+
