Add Admin Roles

--- a/MvcProjeKampi/Views/Shared/_AdminLayout.cshtml
+++ b/MvcProjeKampi/Views/Shared/_AdminLayout.cshtml
@@ -1,6 +1,8 @@
 ﻿
 @{
     Layout = null;
+
+
 }
 
 <!DOCTYPE html>
@@ -65,17 +67,21 @@ to get the desired effect
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <!-- Add icons to the links using the .nav-icon class
-                             with font-awesome or any other icon font library -->
-                        <li class="nav-item">
-                            <a href="/AdminCategory/Index" class="nav-link">
-                                <i class="nav-icon fas fa-tachometer-alt"></i>
-                                <p>
-                                    Kategoriler
+         with font-awesome or any other icon font library -->
+                        @if (User.IsInRole("B"))
+                        {
+                            <li class="nav-item">
+                                <a href="/AdminCategory/Index" class="nav-link">
+                                    <i class="nav-icon fas fa-tachometer-alt"></i>
+                                    <p>
+                                        Kategoriler
 
-                                </p>
-                            </a>
+                                    </p>
+                                </a>
 
-                        </li>
+                            </li>
+                        }
+
                         <li class="nav-item">
                             <a href="/Heading/Index" class="nav-link">
                                 <i class="nav-icon fas fa-th"></i>
@@ -143,17 +149,7 @@ to get the desired effect
                                 </p>
                             </a>
 
-                        </li>
-                        <li class="nav-item has-treeview">
-                            <a href="#" class="nav-link">
-                                <i class="nav-icon fas fa-table"></i>
-                                <p>
-                                    Yazılar
-
-                                </p>
-                            </a>
-
-                        </li>
+                        </li>               
 
                         <li class="nav-item">
                             <a href="pages/calendar.html" class="nav-link">
@@ -177,7 +173,7 @@ to get the desired effect
                                 <i class="nav-icon far fa-envelope"></i>
                                 <p>
                                     Hata sayfaları
-                                    
+
                                 </p>
                             </a>
 
